adaptation mobile correcte

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@
   background-color: $appHeaderBG;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(0.625rem + 2vmin);
