--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -175,8 +175,18 @@
     display: none;
   }
 }
-@media (max-width: 960px) and (min-width: 768px) {
+@media (max-width: 960px){
   .header {
     font-size: 12px;
   }
+  .header .logo {
+    display: block;
+    flex: none;
+    float: left;
+    font-size: 2em;
+    text-decoration: none;
+    margin-top: 10px;
+    line-height: normal;
+  }
 }
+
