--- a/src/containers/greeting/Greeting.scss
+++ b/src/containers/greeting/Greeting.scss
@@ -92,7 +92,7 @@
 /* Media Query */
 @media (max-width: 1380px) {
   .greeting-text {
-    font-size: 50px;
+    font-size: 30px;
   }
   .greeting-text-p {
     font-size: 20px;
@@ -103,7 +103,7 @@
     justify-content: space-around;
   }
   .greeting-text {
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
   }
   .greeting-text-p {
